@@ -1,3 +1,4 @@
+11/8/10 fixed #2570, Vector2DNode bugs causing layout problems in E-field Detector for zero-magnitude vectors
 11/8/10 new 3D E-field detector probe from Noah P, crosshairs properly centered
 11/8/10 new 3D probes from Noah P.
 11/8/10 feasibility test for Noah P. with 3D-looking voltmeter probe
